# SimpleLoopDetect

./: .gitignore  CMakeLists.txt  LoopDetector.kdev4  README.md  package.xml
cmake_modules/: DLibConfig.cmake
demo/: MyDetector.h  MyLoopDetector.cpp  demoDetector.h  demo_brief.cpp  demo_surf.cpp
include/DLoopDetector/: TemplatedLoopDetector.h
